# api/src/http/authentication/routes.rs
@@ -2,8 +2,7 @@ use utoipa_axum::{router::OpenApiRouter, routes};
 
 use crate::http::{
     authentication::handlers::{
-        __path_login, __path_refresh_token, __path_signup, __path_verify_driver_account, login,
-        refresh_token, signup, verify_driver_account,
+        __path_delete_refresh_token, __path_login, __path_refresh_token, __path_signup, __path_verify_driver_account, login, refresh_token, signup, verify_driver_account, delete_refresh_token
     },
     common::app_state::AppState,
 };
@@ -17,4 +16,9 @@ pub fn authentication_routes() -> OpenApiRouter<AppState> {
 
 pub fn refresh_cookie_routes() -> OpenApiRouter<AppState> {
     OpenApiRouter::new().routes(routes!(refresh_token))
+}
+
+pub fn unauthenticated_routes() -> OpenApiRouter<AppState> {
+    OpenApiRouter::new()
+        .routes(routes!(delete_refresh_token))
 }
